[gd_scene load_steps=10 format=2]

[ext_resource path="res://CanvasWallPaper.tscn" type="PackedScene" id=1]
[ext_resource path="res://sunds/pick_up_item.ogg" type="AudioStream" id=2]
[ext_resource path="res://sunds/xplosion.ogg" type="AudioStream" id=3]
[ext_resource path="res://Node2D.gd" type="Script" id=4]
[ext_resource path="res://sunds/Jump.ogg" type="AudioStream" id=5]
[ext_resource path="res://sunds/main_looser.ogg" type="AudioStream" id=6]
[ext_resource path="res://sunds/20_sec_AFK.ogg" type="AudioStream" id=7]
[ext_resource path="res://sunds/main_theme.ogg" type="AudioStream" id=8]
[ext_resource path="res://sunds/main_impact.ogg" type="AudioStream" id=9]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="wallpaper" parent="." instance=ExtResource( 1 )]
layer = -1

[node name="score_update" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="pick_up" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -2.477

[node name="explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -8.667

[node name="jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -6.191

[node name="maby_player" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="looser" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -14.857

[node name="AFK" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="main_theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.487

[node name="impact" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -12.236

[connection signal="timeout" from="score_update" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="maby_player" to="." method="_on_maby_player_timeout"]
